--- a/src/content/technotes/TN0008-production-readiness-checklist.mdx
+++ b/src/content/technotes/TN0008-production-readiness-checklist.mdx
@@ -15,7 +15,7 @@ We recommend that you complete this checklist before your supergraph begins hand
     - For example, the [React client uses the `name` and `version` attributes](/react/api/core/ApolloClient#name) in the constructor options.
   - If you're using a third-party GraphQL client, set the `apollographql-client-name` and `apollographql-client-version` HTTP headers for each request to identify your client.
   - For an example of enforcing client identification in your gateway, see [this technote for Client ID enforcement](/technotes/TN0001-client-id-enforcement/).
-  
+
 ## Server-side
 
 - For security, disable introspection for all production GraphQL servers.
@@ -39,28 +39,28 @@ We recommend that you complete this checklist before your supergraph begins hand
     - Whenever possible, avoid making multiple calls to data sources within a single resolver.
     - Understand [query plan execution](/federation/query-plans) to help understand slow operations and optimize your supergraph to avoid them.
 
-
 ### Apollo Gateway APQ example
 
 This example uses both the [`buildService`](/federation/api/apollo-gateway/#buildservice) option and the [`RemoteGraphQLDataSource`](/federation/api/apollo-gateway/#apq) class to enable APQ to each subgraph.
 
 ```js
-const { ApolloServer } = require('apollo-server');
-const { ApolloGateway, RemoteGraphQLDataSource } = require('@apollo/gateway');
-const { readFileSync } = require('fs');
+import { ApolloServer } from '@apollo/server';
+import { startStandaloneServer } from '@apollo/server/standalone';
+import { ApolloGateway, RemoteGraphQLDataSource } from '@apollo/gateway';
+import { readFileSync } from 'fs';
 
 const gateway = new ApolloGateway({
-  supergraphSdl: readFileSync("./supergraph.graphql").toString(),
-  buildService: ({url})=>{
-    return new RemoteGraphQLDataSource({url, apq: true})
-  }
+  supergraphSdl: readFileSync('./supergraph.graphql').toString(),
+  buildService: ({ url }) => {
+    return new RemoteGraphQLDataSource({ url, apq: true });
+  },
 });
 
 const server = new ApolloServer({
   gateway,
 });
 
-server.listen().then(({ url }) => {
-  console.log(`🚀 Server ready at ${url}`);
-});
+// Note the top-level await!
+const { url } = await startStandaloneServer(server);
+console.log(`🚀  Server ready at ${url}`);
 ```
