Update icons and titles for new algolia docset values

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -42,7 +42,7 @@ Apollo is a platform for building a [**supergraph**](./intro/platform/), a unifi
 
 <DocsetGrid>
   <Docset
-    icon={DOCSET_ICONS.server}
+    icon={DOCSET_ICONS['apollo-server']}
     title="Apollo Server"
     description="Configure a production-ready GraphQL server to fetch and combine data from multiple sources."
     path="/apollo-server"
@@ -66,9 +66,9 @@ Apollo is a platform for building a [**supergraph**](./intro/platform/), a unifi
 Execute GraphQL operations, cache their results, and manage your application's state with one powerful library.
 
 <DocsetGrid>
-  <Docset icon={DOCSET_ICONS.react} title="React" path="/react" />
-  <Docset icon={DOCSET_ICONS.ios} title="iOS" path="/ios" />
-  <Docset icon={DOCSET_ICONS.android} title="Kotlin" path="/kotlin" />
+  <Docset icon={DOCSET_ICONS['apollo-client']} title="React" path="/react" />
+  <Docset icon={DOCSET_ICONS['apollo-ios']} title="iOS" path="/ios" />
+  <Docset icon={DOCSET_ICONS['apollo-android']} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
 
 <VStack pt="4" spacing="4" textAlign="center" maxW="md" mx="auto">
