Change Rover icon and fix Kotlin icon

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -68,7 +68,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
 <DocsetGrid>
   <Docset icon={DOCSET_ICONS['apollo-client']} title="React" path="/react" />
   <Docset icon={DOCSET_ICONS['apollo-ios']} title="iOS" path="/ios" />
-  <Docset icon={DOCSET_ICONS['apollo-android']} title="Kotlin" path="/kotlin" />
+  <Docset icon={DOCSET_ICONS['apollo-kotlin']} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
 
 <VStack pt="4" spacing="4" textAlign="center" maxW="md" mx="auto">
